# fec-data-tools

./: .gitignore  README.md  SPEC.md  pyproject.toml
fec_formatter/: __init__.py  cli.py  combiner.py  config.py  container.py  services.py
tests/: conftest.py  test_cli_format.py  test_cli_paths.py  test_combiner.py  test_container.py  test_fec_formatter.py  test_filters.py  test_sort_and_formats.py
