[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fec-data-tools"
version = "0.1.0"
description = "Utilities for combining, filtering, and formatting FEC CSV data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openpyxl>=3.1.2",
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
]

[project.scripts]
fec-tools = "fec_formatter.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["fec_formatter"]

[tool.pytest.ini_options]
addopts = "-q --cov=fec_formatter --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]


